<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/color_bg" android:paddingLeft="20dip" android:paddingRight="10dip" android:paddingBottom="20dip"><RadioGroup android:id="@+id/RadioGroup02" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="wrap_content">
			<RadioButton android:typeface="monospace" android:checked="true" android:text="@string/grayscale" android:textSize="14sp" android:gravity="center" android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="fill_parent" android:id="@+id/radio_gs" android:textColor="#c1e7ef"></RadioButton>
			<RadioButton android:text="@string/colorize" android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="fill_parent" android:textSize="14sp" android:id="@+id/radio_color" android:textColor="#c1e7ef"></RadioButton>
		</RadioGroup><RadioGroup android:id="@+id/RadioGroup01"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_weight="1">
			<CheckBox android:textScaleX="1" android:typeface="monospace"
				android:layout_width="fill_parent" android:text="@string/invert" android:layout_weight="1"
				android:layout_height="fill_parent" android:layout_marginRight="10dip"
				android:textSize="14sp" android:gravity="center"
				android:paddingLeft="20dip" android:id="@+id/check_invert" android:textColor="@color/str_state_color" android:enabled="false"></CheckBox>
			<CheckBox android:layout_width="fill_parent"
				android:layout_weight="1" android:text="@string/bw"
				android:layout_height="fill_parent"
				android:textSize="14sp" android:paddingRight="10dip"
				android:visibility="visible" android:gravity="center" android:id="@+id/check_bw" android:textColor="@color/str_state_color" android:enabled="false"></CheckBox>

		</RadioGroup>
</LinearLayout>
