<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" android:background="#00000000" android:orientation="horizontal" android:layout_width="fill_parent">


<LinearLayout android:id="@+id/LinearLayout02" android:orientation="vertical" android:layout_height="fill_parent" android:background="#00ffffff" android:visibility="visible" android:layout_width="fill_parent" android:layout_weight="1">

<LinearLayout android:id="@+id/LinearLayout04" android:layout_width="fill_parent" android:background="#cccccc" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_weight="1" android:minHeight="50dp"><TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:textColor="#ff000000" android:text="+/-" android:typeface="monospace" android:gravity="center_horizontal" android:textSize="17sp" android:layout_width="wrap_content" android:layout_gravity="center"></TextView><SeekBar android:id="@+id/SeekBar01" android:layout_width="fill_parent" android:paddingLeft="5sp" android:paddingRight="5sp" android:max="150" android:layout_gravity="center" android:layout_height="wrap_content"></SeekBar>

</LinearLayout>
<RadioGroup android:id="@+id/RadioGroup02" android:layout_height="wrap_content" android:orientation="horizontal" android:background="#aaaaaa" android:layout_width="fill_parent"><RadioButton android:id="@+id/RadioButton01" android:textColor="#ff000000" android:typeface="monospace" android:checked="true" android:text="@string/grayscale" android:textSize="14sp" android:gravity="center" android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="fill_parent"></RadioButton><RadioButton android:textColor="#000000" android:id="@+id/colorize" android:text="@string/colorize" android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="fill_parent" android:textSize="14sp"></RadioButton>
</RadioGroup><LinearLayout android:id="@+id/LinearLayout03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:background="#888888"><TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_gravity="center" android:layout_weight="1.5" android:paddingLeft="5sp" android:typeface="monospace" android:gravity="center" android:textColor="#ff000000" android:text="@string/imsize" android:textSize="14sp"></TextView>

<Spinner android:id="@+id/Spinner01" android:layout_weight="1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_vertical"></Spinner>
</LinearLayout><RadioGroup android:id="@+id/RadioGroup01" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_weight="1" android:background="#aaaaaa"><CheckBox android:id="@+id/CheckBox01" android:textColor="#ff000000" android:textScaleX="1" android:typeface="monospace" android:layout_width="fill_parent" android:background="#aaaaaa" android:text="@string/invert" android:layout_weight="1" android:layout_height="fill_parent" android:layout_marginRight="10dip" android:textSize="14sp" android:gravity="center" android:paddingLeft="20dip"></CheckBox>
<CheckBox android:id="@+id/CheckBox02" android:layout_width="fill_parent" android:layout_weight="1" android:text="@string/bw" android:textColor="#000000" android:layout_height="fill_parent" android:textSize="14sp" android:paddingRight="10dip" android:visibility="visible" android:gravity="center"></CheckBox>

</RadioGroup>





<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:background="#cccccc" android:id="@+id/LinearLayout10" android:visibility="gone"><TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_gravity="center" android:layout_weight="1.5" android:paddingLeft="5sp" android:textSize="17sp" android:typeface="monospace" android:gravity="center" android:textColor="#ff000000" android:text="Quality"></TextView>

<Spinner android:layout_weight="1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:id="@+id/Spinner02"></Spinner>

</LinearLayout>



<LinearLayout android:id="@+id/LinearLayout09" android:layout_weight="1" android:background="#cccccc" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">


<Button android:id="@+id/Button03" android:layout_weight="1" android:textSize="12sp" android:layout_gravity="center" android:typeface="monospace" android:text="@string/reset" android:layout_height="fill_parent" android:layout_width="fill_parent"></Button>
<Button android:text="More &gt;&gt;&gt;" android:layout_width="fill_parent" android:typeface="monospace" android:textSize="12sp" android:layout_height="fill_parent" android:layout_weight="1" android:id="@+id/morebutton"></Button>
</LinearLayout>


</LinearLayout><LinearLayout android:background="#00ff0000" android:orientation="vertical" android:id="@+id/extlay" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="0.8" android:visibility="visible">


<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_height="fill_parent" android:background="#eeeeee" android:visibility="visible" android:layout_width="wrap_content"><LinearLayout android:id="@+id/LinearLayout05" android:background="#eeeeee" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@+id/lessbutton"><Button android:id="@+id/Button01" android:layout_width="fill_parent" android:layout_weight="1" android:typeface="monospace" android:textSize="12sp" android:text="@string/saveaspic" android:layout_height="fill_parent"></Button>
<Button android:id="@+id/Button02" android:layout_width="fill_parent" android:typeface="monospace" android:textSize="12sp" android:text="@string/saveastext" android:layout_height="fill_parent" android:layout_weight="1"></Button>

</LinearLayout><LinearLayout android:id="@+id/LinearLayout06" android:layout_height="wrap_content" android:layout_width="fill_parent" android:background="#bbbbbb" android:layout_above="@+id/LinearLayout05"><Button android:id="@+id/Button04" android:layout_weight="1" android:typeface="monospace" android:textSize="12sp" android:layout_gravity="center" android:text="@string/about" android:layout_height="fill_parent" android:layout_width="fill_parent"></Button><Button android:text="Share" android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_weight="1" android:textSize="12sp" android:typeface="monospace" android:id="@+id/share"></Button>
</LinearLayout><Button android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_width="fill_parent" android:text="&lt;&lt;&lt; Less" android:textSize="12sp" android:id="@+id/lessbutton"></Button>
</RelativeLayout></LinearLayout>



</LinearLayout>
